--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -46,6 +46,7 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.669" />
+        app:layout_constraintVertical_bias="0.669"
+        android:textColor="@android:color/white"/>
 
 </android.support.constraint.ConstraintLayout>
