--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -38,15 +38,15 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:background="@color/colorAccent"
+        android:background="@color/colorPrimaryDark"
         android:text="@string/action_sign_in"
+        android:textColor="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.669"
-        android:textColor="@android:color/white"/>
+        app:layout_constraintVertical_bias="0.669" />
 
 </android.support.constraint.ConstraintLayout>
