--- a/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_choose_profile_picture.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primaryLightColor"
     tools:context="com.example.alan.peter.bilal.sam.choremanager.ChooseProfilePictureActivity">
 
     <LinearLayout
@@ -27,13 +28,13 @@
         <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/colorAccent">
+            android:background="@color/primaryLightColor">
 
             <GridLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:background="@color/colorAccent"
+                android:background="@color/primaryLightColor"
                 android:clipToPadding="false"
                 android:columnCount="3"
                 android:rowCount="3">
@@ -42,6 +43,7 @@
                     android:id="@+id/ic_avatar_11"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_11" />
@@ -50,6 +52,7 @@
                     android:id="@+id/ic_avatar_00"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_00" />
@@ -58,6 +61,7 @@
                     android:id="@+id/ic_avatar_01"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_01" />
@@ -66,6 +70,7 @@
                     android:id="@+id/ic_avatar_02"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_02"
@@ -76,6 +81,7 @@
                     android:id="@+id/ic_avatar_03"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_03" />
@@ -84,6 +90,7 @@
                     android:id="@+id/ic_avatar_04"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_04" />
@@ -92,6 +99,7 @@
                     android:id="@+id/ic_avatar_05"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_05" />
@@ -100,6 +108,7 @@
                     android:id="@+id/ic_avatar_06"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_06" />
@@ -108,6 +117,7 @@
                     android:id="@+id/ic_avatar_07"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_07" />
@@ -116,6 +126,7 @@
                     android:id="@+id/ic_avatar_08"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_08" />
@@ -124,6 +135,7 @@
                     android:id="@+id/ic_avatar_09"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_09" />
@@ -132,6 +144,7 @@
                     android:id="@+id/ic_avatar_10"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_margin="1.5dp"
                     android:contentDescription="@string/desc_avatar_image"
                     android:onClick="SetProfileIcon"
                     app:srcCompat="@drawable/ic_avatar_10" />
