--- a/ChoreManager/app/src/main/res/layout/activity_materials.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_materials.xml
@@ -28,9 +28,10 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:onClick="deleteSelectedOnClick"
-            android:text="@string/deleteSelected" />
+            android:text="@string/deleteSelected"
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/addItem"
@@ -40,9 +41,10 @@
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
             android:layout_weight="1"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:onClick="addMaterialOnClick"
-            android:text="@string/addItem" />
+            android:text="@string/addItem"
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <ListView
