--- a/ChoreManager/app/src/main/res/layout/add_item_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/add_item_layout.xml
@@ -41,9 +41,9 @@
             android:layout_marginRight="2.5dp"
             android:layout_marginStart="5dp"
             android:layout_weight=".99"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/string_cancel"
-            android:textColor="@color/secondaryTextColor" />
+            android:textColor="@color/primaryLightColor" />
 
         <Button
             android:id="@+id/confirmButton"
@@ -56,9 +56,9 @@
             android:layout_marginRight="5dp"
             android:layout_marginStart="2.5dp"
             android:layout_weight=".99"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/string_confirm"
-            android:textColor="@color/secondaryTextColor" />
+            android:textColor="@color/primaryLightColor" />
     </LinearLayout>
 
 </LinearLayout>
