--- a/ChoreManager/app/src/main/res/layout/delete_item_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/delete_item_layout.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -33,9 +34,9 @@
             android:layout_marginRight="2.5dp"
             android:layout_marginStart="5dp"
             android:layout_weight=".99"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/string_cancel"
-            android:textColor="@color/secondaryTextColor" />
+            android:textColor="@color/primaryLightColor" />
 
         <Button
             android:id="@+id/confirmButton"
@@ -48,8 +49,8 @@
             android:layout_marginRight="5dp"
             android:layout_marginStart="2.5dp"
             android:layout_weight=".99"
-            android:background="@color/colorAccent"
+            android:background="@color/colorPrimaryDark"
             android:text="@string/string_confirm"
-            android:textColor="@color/secondaryTextColor" />
+            android:textColor="@color/primaryLightColor" />
     </LinearLayout>
 </LinearLayout>
