--- a/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_new_chore.xml
@@ -129,7 +129,8 @@
                         style="@style/Widget.AppCompat.Spinner.Underlined"
                         android:layout_width="0dp"
                         android:layout_height="45dp"
-                        android:layout_weight="1" />
+                        android:layout_weight="1"
+                        android:tooltipText="TYEST" />
 
                 </LinearLayout>
 
@@ -164,7 +165,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimaryDark"
                     android:text="@string/string_pick_deadline"
-                    android:textColor="@color/primaryLightColor" />
+                    android:textColor="@android:color/white" />
 
                 <TextView
                     android:id="@+id/actualDeadlineTextView"
@@ -258,7 +259,7 @@
             android:background="@color/colorPrimaryDark"
             android:onClick="saveExitOnClick"
             android:text="@string/save_and_exit"
-            android:textColor="@color/primaryLightColor"
+            android:textColor="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
