--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -15,7 +15,7 @@
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/resetDataButton"
-        android:textColor="@color/primaryLightColor"
+        android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
