--- a/ChoreManager/app/src/main/res/layout/delete_item_layout.xml
+++ b/ChoreManager/app/src/main/res/layout/delete_item_layout.xml
@@ -36,7 +36,7 @@
             android:layout_weight=".99"
             android:background="@color/colorPrimaryDark"
             android:text="@string/string_cancel"
-            android:textColor="@color/primaryLightColor" />
+            android:textColor="@android:color/white" />
 
         <Button
             android:id="@+id/confirmButton"
@@ -51,6 +51,6 @@
             android:layout_weight=".99"
             android:background="@color/colorPrimaryDark"
             android:text="@string/string_confirm"
-            android:textColor="@color/primaryLightColor" />
+            android:textColor="@android:color/white" />
     </LinearLayout>
 </LinearLayout>
