Added option to rAssign User in Specific Chore Activity

--- a/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_specific_chore.xml
@@ -241,6 +241,7 @@
                         android:layout_marginStart="2dp"
                         android:layout_weight="1"
                         android:background="@color/colorPrimaryDark"
+                        android:onClick="onClickReAssign"
                         android:text="@string/reassignButton"
                         android:textColor="@android:color/white" />
 
