--- a/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_shopping_list.xml
@@ -122,6 +122,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="1dp" />
 
 </android.support.constraint.ConstraintLayout>
