--- a/ChoreManager/app/src/main/res/layout/activity_settings.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_settings.xml
@@ -14,6 +14,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimaryDark"
+        android:onClick="resetDataOnClick"
         android:text="@string/resetDataButton"
         android:textColor="@android:color/white"
         app:layout_constraintBottom_toBottomOf="parent"
