--- a/ChoreManager/app/src/main/res/layout/activity_app_login.xml
+++ b/ChoreManager/app/src/main/res/layout/activity_app_login.xml
@@ -39,7 +39,7 @@
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:background="@color/colorPrimaryDark"
-        android:text="@string/action_sign_in"
+        android:text="@string/string_sign_in"
         android:textColor="@android:color/white"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
